chore(repo): consolidate into monorepo with backend/ + frontend/
- Move 5 Maven modules + pom + backend docs into backend/
- Bring frontend in (was sibling repo, never tracked) into frontend/
- Add Maven Wrapper (mvnw / .mvn/wrapper) to backend/
- Add root-level meta: .editorconfig, README.md, AGENTS.md (workspace
  rules + Conventional Commits), root .gitignore for shared IDE/OS
- Add GitHub Actions: backend.yml + frontend.yml with path filters,
  plus pull_request_template.md
- Update cross-stack path refs in both AGENTS.md (../frontend/ and
  ../backend/), link to root AGENTS.md from each
- Move cross-stack data-scope-demo.md to root docs/; keep backend
  RBAC建设方案.md under backend/docs/

Verified: backend ./mvnw clean compile (6 modules BUILD SUCCESS)
and frontend vite build both pass.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>